--- a/traktir.html
+++ b/traktir.html
@@ -2,7 +2,11 @@
     <head>
         <link rel="stylesheet" href="style.css">
     </head>
+    <body>
     <div class="c-dana">
         <img src="gambar/WhatsApp Image 2025-10-01 at 00.01.14_47b1d033.jpg" class="c-gopay">
     </div>
+    </body>
 </html>
+
+    
